[project]
name = "contactsman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.14"
dependencies = [
    "google-api-python-client==2.84.0",
    "google-auth-httplib2==0.1.0",
    "google-auth-oauthlib==1.0.0",
    "pillow==9.5.0",
    "rich==13.3.4",
    "vobject==0.9.6.1",
]

[tool.black]
skip-string-normalization = true
line-length = 100
